src/tests/snapshots/learn_chumsky__tests__expr__recover_call.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
testing(,)
---

Some(
    (
        Call(
            (
                Ident("testing"),
                0..7,
            ),
            [
                (
                    Error,
                    7..10,
                ),
            ],
        ),
        0..10,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 8..9,
        reason: Unexpected,
        found: Comma,
        expected: [
            Dot,
            Minus,
            Bang,
            Break,
            Continue,
            If,
            Loop,
            Return,
            OpenParen,
            CloseParen,
            OpenBrace,
        ],
    },
]
---
