src/tests/snapshots/learn_chumsky__tests__expr__recover_group-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
( / 888)
---

Some(
    (
        Error,
        0..8,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 2..3,
        reason: Unexpected,
        found: Slash,
        expected: [
            Dot,
            Minus,
            Bang,
            Break,
            Continue,
            If,
            Loop,
            Return,
            OpenParen,
            OpenBrace,
        ],
    },
]
---
