src/tests/snapshots/learn_chumsky__tests__expr__recover_group-4.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
((testing)
---

None

--- Errors ---
[
    ParseError {
        label: None,
        span: 9..10,
        reason: Unexpected,
        found: CloseParen,
        expected: [
            Plus,
            Minus,
            Star,
            Slash,
            BangEq,
            Eq,
            EqEq,
            LessThan,
            GreaterThan,
            OpenParen,
            CloseParen,
            OpenBrace,
        ],
    },
]
---
