src/tests/snapshots/learn_chumsky__tests__expr__recover_group-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(testing}
---

Some(
    Spanned(
        Error,
        0..9,
    ),
)

--- Errors ---
[
    ParseError {
        span: 8..9,
        reason: ExpectedFound {
            expected: [
                Plus,
                Minus,
                Star,
                Slash,
                BangEq,
                Eq,
                EqEq,
                LessThan,
                GreaterThan,
                OpenParen,
                CloseParen,
                OpenBrace,
            ],
            found: Some(
                CloseBrace,
            ),
        },
    },
]
---
