src/tests/snapshots/learn_chumsky__tests__expr__recover_group.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(testing;)
---

Some(
    Spanned(
        Error,
        0..10,
    ),
)

--- Errors ---
[
    ParseError {
        label: None,
        span: 8..9,
        reason: Unexpected,
        found: Semi,
        expected: [
            Plus,
            Minus,
            Star,
            Slash,
            BangEq,
            Eq,
            EqEq,
            LessThan,
            GreaterThan,
            OpenParen,
            CloseParen,
            OpenBrace,
        ],
    },
]
---
