src/tests/snapshots/learn_chumsky__tests__expr__recover_if-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if testing(1, {2, 3) then _
---

Some(
    (
        If {
            condition: (
                Call(
                    (
                        Ident("testing"),
                        3..10,
                    ),
                    [
                        (
                            Error,
                            10..20,
                        ),
                    ],
                ),
                3..20,
            ),
            then_branch: (
                Ident("_"),
                26..27,
            ),
            else_branch: None,
        },
        0..27,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Block,
        ),
        span: 16..17,
        reason: Unexpected,
        found: Comma,
        expected: [
            Semi,
            Dot,
            Plus,
            Minus,
            Star,
            Slash,
            Bang,
            BangEq,
            EqEq,
            LessThan,
            GreaterThan,
            Break,
            Const,
            Continue,
            Func,
            If,
            Loop,
            Mod,
            Mut,
            Return,
            OpenParen,
            OpenBrace,
            CloseBrace,
        ],
    },
]
---
