src/tests/snapshots/learn_chumsky__tests__expr__recover_if.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if testing(,) then _
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Call(
                    Spanned(
                        Ident("testing"),
                        3..10,
                    ),
                    [
                        Spanned(
                            Error,
                            10..13,
                        ),
                    ],
                ),
                3..13,
            ),
            then_branch: Spanned(
                Ident("_"),
                19..20,
            ),
            else_branch: None,
        },
        0..20,
    ),
)

--- Errors ---
[
    ParseError {
        label: None,
        span: 11..12,
        reason: Unexpected,
        found: Comma,
        expected: [
            Dot,
            Minus,
            Bang,
            Break,
            Continue,
            If,
            Loop,
            Return,
            OpenParen,
            CloseParen,
            OpenBrace,
        ],
    },
]
---
