src/tests/snapshots/learn_chumsky__tests__expr__simple_expressions-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
(grouped_ident)
---

Some(
    (
        Ident("grouped_ident"),
        1..14,
    ),
)

--- Errors ---
[]
---
